2022-11-02T16:37:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379403260 # 577
* notice: last 14d: unq all: 3 32
* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 397 627
* notice: next accum: outdated-unq outdated-all / unq all: 380 596 / 397 628
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-02]

2022-11-02T08:30:46Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3375962467 # 576
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 396 627
* notice: next accum: outdated-unq outdated-all / unq all: 380 596 / 397 627
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-10-19 2022-11-02]

2022-11-02T02:24:22Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3374375477 # 575
* notice: last 14d: unq all: 3 31
* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 396 626
* notice: next accum: outdated-unq outdated-all / unq all: 380 596 / 396 627
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-11-01]

2022-11-01T16:37:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3371134451 # 574
* notice: last 14d: unq all: 3 30
* notice: prev accum: outdated-unq outdated-all / unq all: 379 594 / 396 625
* notice: next accum: outdated-unq outdated-all / unq all: 380 596 / 396 626
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-10-18] / []

2022-11-01T08:31:03Z: