@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-02T16:37:46Z",
-  "count_outdated" : 596,
-  "uniques_outdated" : 380,
-  "count" : 628,
+  "timestamp" : "2022-11-03T02:05:56Z",
+  "count_outdated" : 598,
+  "uniques_outdated" : 381,
+  "count" : 629,
   "uniques" : 397,
   "clones" : [
-    {
-      "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-10-20T00:00:00Z",
       "count": 2,
