@@ -1,3 +1,11 @@
+2022-11-03T02:05:56Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3382498805 # 578
+* notice: last 14d: unq all: 3 31
+* notice: prev accum: outdated-unq outdated-all / unq all: 380 596 / 397 628
+* notice: next accum: outdated-unq outdated-all / unq all: 381 598 / 397 629
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2022-10-19] / []
+
 2022-11-02T16:37:46Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3379403260 # 577
 * notice: last 14d: unq all: 3 32
